feat => added tests and some new features
