# src/modules/cars/models/Specification.ts
@@ -1,17 +1,0 @@
-import { v4 as uuid } from "uuid";
-
-class Specification {
-    id?: string;
-
-    name: string;
-    description: string;
-    created_at: Date;
-
-    constructor() {
-        if (!this.id) {
-            this.id = uuid();
-        }
-    }
-}
-
-export { Specification };
