# src/routes/specifications.routes.ts
@@ -1,11 +1,16 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { ensureAuthenticated } from "../middleware/ensureAuthenticated";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+
+specificationsRoutes.post(
+    "/",
+    ensureAuthenticated,
+    createSpecificationController.handle
+);
 
 export { specificationsRoutes };
